--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) 启动",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/parseTest.out",
+            "program": "${workspaceFolder}/bin/debug/jsonParseTest.out",
             "args": [],
             "stopAtEntry": false,
             // "cwd": "${fileDirname}",
